[PRDG-0001] Continue working on user social statistic logic
