# src/main/java/com/paradigma/filmio/api/mapper/UserDTOMapper.java
@@ -4,8 +4,10 @@ package com.paradigma.filmio.api.mapper;
 import com.paradigma.filmio.api.model.CreateUserAccountRequestV1;
 import com.paradigma.filmio.api.model.UpdateUserV1;
 import com.paradigma.filmio.api.model.UserRepresentationV1;
+import com.paradigma.filmio.api.model.UserSocialStatisticsV1;
 import com.paradigma.filmio.core.domain.model.User;
 import com.paradigma.filmio.core.domain.model.UserAccount;
+import com.paradigma.filmio.core.model.UserSocialStatistics;
 import org.mapstruct.Builder;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
@@ -22,4 +24,5 @@ public interface UserDTOMapper {
     @Mapping(target = "media", source = "medias")
     @Mapping(target = "country", source = "countryId")
     User toUser(UpdateUserV1 updateUserV1);
+    UserSocialStatisticsV1 toUserSocialStatisticsV1(UserSocialStatistics statistics);
 }
