# src/main/java/com/paradigma/filmio/api/validator/PageableValidator.java
@@ -1,0 +1,7 @@
+package com.paradigma.filmio.api.validator;
+
+import com.paradigma.filmio.api.model.PageModel;
+
+public interface PageableValidator {
+    void validate(PageModel pageable);
+}
